force-app/main/default/objects/LGK__Transaction__c/fields/Approvals_Needed__c.field-meta.xml
<CustomField>
    <fullName>Approvals_Needed__c</fullName>
    <label>Approvals Needed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>