force-app/main/default/objects/LGK__Transaction__c/fields/Cashview_Margin__c.field-meta.xml
<CustomField>
    <fullName>Cashview_Margin__c</fullName>
    <label>Cashview Margin %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>