force-app/main/default/objects/LGK__Transaction__c/fields/Deal_Review__c.field-meta.xml
<CustomField>
    <fullName>Deal_Review__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deal Review</label>
    <referenceTo>Deal_Review__c</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>