force-app/main/default/objects/LGK__Transaction__c/fields/Deal_Review_Status__c.field-meta.xml
<CustomField>
    <fullName>Deal_Review_Status__c</fullName>
    <formula>TEXT(Deal_Review__r.Deal_Approval_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal Review Status</label>
    <type>Text</type>
</CustomField>