force-app/main/default/objects/LGK__Transaction__c/fields/Extended_List_Total__c.field-meta.xml
<CustomField>
    <fullName>Extended_List_Total__c</fullName>
    <label>Extended List Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>