force-app/main/default/objects/LGK__Transaction__c/fields/Floor_Rate__c.field-meta.xml
<CustomField>
    <fullName>Floor_Rate__c</fullName>
    <label>Floor Rate %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>