force-app/main/default/objects/LGK__Transaction__c/fields/Get_Support_RM__c.field-meta.xml
<CustomField>
    <fullName>Get_Support_RM__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Gets auto set from the configurator field</description>
    <label>Get Support RM</label>
    <type>Checkbox</type>
</CustomField>