force-app/main/default/objects/LGK__Transaction__c/fields/Get_Support_Shred__c.field-meta.xml
<CustomField>
    <fullName>Get_Support_Shred__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Get auto sync from the configuration field</description>
    <label>Get Support Shred</label>
    <type>Checkbox</type>
</CustomField>