force-app/main/default/objects/LGK__Transaction__c/fields/LGK__AccountId__c.field-meta.xml
<CustomField>
    <fullName>LGK__AccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>txn.account.id</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>AccountTransactions</relationshipName>
    <type>Lookup</type>
</CustomField>