force-app/main/default/objects/LGK__Transaction__c/fields/LGK__CreatedByUsername__c.field-meta.xml
<CustomField>
    <fullName>LGK__CreatedByUsername__c</fullName>
    <description>txn.createdBy</description>
    <formula>CreatedBy.Username</formula>
    <label>Created By Username</label>
    <type>Text</type>
</CustomField>