force-app/main/default/objects/LGK__Transaction__c/fields/LGK__Flightpath__c.field-meta.xml
<CustomField>
    <fullName>LGK__Flightpath__c</fullName>
    <label>Flightpath</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Available</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>