force-app/main/default/objects/LGK__Transaction__c/fields/LGK__Id__c.field-meta.xml
<CustomField>
    <fullName>LGK__Id__c</fullName>
    <description>txn.id</description>
    <externalId>true</externalId>
    <label>Transaction Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>