force-app/main/default/objects/LGK__Transaction__c/fields/LGK__OpportunityId__c.field-meta.xml
<CustomField>
    <fullName>LGK__OpportunityId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>txn.opportunity.id</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>OpportunityTransactions</relationshipName>
    <type>Lookup</type>
</CustomField>