force-app/main/default/objects/LGK__Transaction__c/fields/LGK__Pricebook2Id__c.field-meta.xml
<CustomField>
    <fullName>LGK__Pricebook2Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>txn.pricebook.id</description>
    <label>Pricebook</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>PricebookTransactions</relationshipName>
    <type>Lookup</type>
</CustomField>