force-app/main/default/objects/LGK__Transaction__c/fields/LGK__PricingTotal__c.field-meta.xml
<CustomField>
    <fullName>LGK__PricingTotal__c</fullName>
    <description>txn.pricing.total</description>
    <label>Total</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>