force-app/main/default/objects/LGK__Transaction__c/fields/LGK__Stage__c.field-meta.xml
<CustomField>
    <fullName>LGK__Stage__c</fullName>
    <description>txn.stage</description>
    <label>Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>