force-app/main/default/objects/LGK__Transaction__c/fields/LGK__VersionNumber__c.field-meta.xml
<CustomField>
    <fullName>LGK__VersionNumber__c</fullName>
    <description>txn.version.number</description>
    <label>Version Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>