force-app/main/default/objects/LGK__Transaction__c/fields/RIM_BU_EAA__c.field-meta.xml
<CustomField>
    <fullName>RIM_BU_EAA__c</fullName>
    <description>Set from TM header</description>
    <label>RIM BU EAA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>