force-app/main/default/objects/LGK__Transaction__c/fields/Support_Data_Raw__c.field-meta.xml
<CustomField>
    <fullName>Support_Data_Raw__c</fullName>
    <description>Support Notes payload set from the 7 support notes fields within Logik configurator. Transaction integration syncTransactionLines pushes this payload</description>
    <label>Support Data Raw</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>