force-app/main/default/objects/LGK__Transaction__c/fields/Support_Notes_DM__c.field-meta.xml
<CustomField>
    <fullName>Support_Notes_DM__c</fullName>
    <description>Get auto sync from the configuration field</description>
    <label>Support Notes DM</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>