force-app/main/default/objects/LGK__Transaction__c/fields/Target_Rate_Achieved__c.field-meta.xml
<CustomField>
    <fullName>Target_Rate_Achieved__c</fullName>
    <label>Target Rate Achieved %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>