force-app/main/default/objects/LGK__Transaction__c/fields/Total_TAA__c.field-meta.xml
<CustomField>
    <fullName>Total_TAA__c</fullName>
    <description>Set from TM header</description>
    <label>Total TAA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>