force-app/main/default/objects/LGK__Transaction__c/fields/W_L_BU_TAA__c.field-meta.xml
<CustomField>
    <fullName>W_L_BU_TAA__c</fullName>
    <description>Set from TM header</description>
    <label>W&amp;L BU TAA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>