force-app/main/default/objects/LGK__Transaction__c/listViews/LGK__All.listView-meta.xml
<ListView>
    <fullName>LGK__All</fullName>
    <columns>NAME</columns>
    <columns>LGK__Id__c</columns>
    <columns>LGK__Stage__c</columns>
    <columns>LGK__AccountId__c</columns>
    <columns>LGK__OpportunityId__c</columns>
    <columns>LGK__PricingTotal__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>LGK__EditLink__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>